[package]
name = "bench_tester"
version = "0.1.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.4"
csv = "1.1.1"
toml = "0.5.5"
serde = { version = "1.0.102", features = ["derive"] }
